bug-fix: menu list over header on Safari mobile

--- a/src/styles/components/menu.css
+++ b/src/styles/components/menu.css
@@ -77,7 +77,7 @@
   background-color: var(--black-1);
 
   position: absolute;
-  top: -100%;
+  top: -200%;
 
   transition: all 0.3s ease-in-out;
 
